完成了web端登录界面以及部分主界面的开发，同时已与服务器同步

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="img/favicon.ico">
-    <title>web</title>
-    <link href="static/css/app.b061027f.css" rel="preload" as="style">
-    <link href="static/css/chunk-vendors.16da611a.css" rel="preload" as="style">
-    <link href="static/js/app.6f6c1ccd.js" rel="preload" as="script">
-    <link href="static/js/chunk-vendors.4172a338.js" rel="preload" as="script">
-    <link href="static/css/chunk-vendors.16da611a.css" rel="stylesheet">
-    <link href="static/css/app.b061027f.css" rel="stylesheet">
-</head>
-<body>
-<noscript><strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to
-    continue.</strong></noscript>
-<div id="app"></div>
-<script src="static/js/chunk-vendors.4172a338.js"></script>
-<script src="static/js/app.6f6c1ccd.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="img/favicon.ico"><title>web</title><link href="static/css/app.9e7f6459.css" rel="preload" as="style"><link href="static/css/chunk-vendors.16da611a.css" rel="preload" as="style"><link href="static/js/app.57448922.js" rel="preload" as="script"><link href="static/js/chunk-vendors.c477ebed.js" rel="preload" as="script"><link href="static/css/chunk-vendors.16da611a.css" rel="stylesheet"><link href="static/css/app.9e7f6459.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="static/js/chunk-vendors.c477ebed.js"></script><script src="static/js/app.57448922.js"></script></body></html>
